# proyecto_pred_crime_data_from_2020

./: pyproject.toml  readme.md  requirements_crime_data.txt
docs/: bias_racism_analysis.html  data_dict.txt
src/: bias_racism_analysis.ipynb  ejercicio_inicial_estudiantes.ipynb  preliminary_data_analysis.ipynb
