[project]
name = "proyecto-pred-crime-data-from-2020"
version = "0.1.0"
description = ""
authors = [
    {name = "David",email = "rbdavi5@mapfre.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel (==6.29.5)",
    "seaborn (==0.13.2)",
    "matplotlib (==3.10.0)",
    "pandas (==2.2.3)",
    "scipy (>=1.17.0,<2.0.0)",
    "notebook (>=7.5.3,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
